--- a/module-1/lab-import-export/your-code/main.ipynb
+++ b/module-1/lab-import-export/your-code/main.ipynb
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Spring</td>\n",
-       "      <td>69.0</td>\n",
+       "      <td>30.42</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -951,7 +951,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Spring</td>\n",
-       "      <td>94.0</td>\n",
+       "      <td>34.92</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -964,7 +964,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Spring</td>\n",
-       "      <td>50.0</td>\n",
+       "      <td>27.00</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -977,7 +977,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Spring</td>\n",
-       "      <td>75.0</td>\n",
+       "      <td>31.50</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -990,7 +990,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Spring</td>\n",
-       "      <td>67.0</td>\n",
+       "      <td>30.06</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -1003,7 +1003,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Spring</td>\n",
-       "      <td>67.0</td>\n",
+       "      <td>30.06</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1016,7 +1016,7 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Spring</td>\n",
-       "      <td>67.0</td>\n",
+       "      <td>30.06</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1029,7 +1029,7 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Spring</td>\n",
-       "      <td>100.0</td>\n",
+       "      <td>36.00</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -1042,7 +1042,7 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>fall</td>\n",
-       "      <td>64.0</td>\n",
+       "      <td>29.52</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1055,7 +1055,7 @@
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>fall</td>\n",
-       "      <td>61.0</td>\n",
+       "      <td>28.98</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1068,7 +1068,7 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>fall</td>\n",
-       "      <td>67.0</td>\n",
+       "      <td>30.06</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -1081,7 +1081,7 @@
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>fall</td>\n",
-       "      <td>78.0</td>\n",
+       "      <td>32.04</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -1094,7 +1094,7 @@
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>fall</td>\n",
-       "      <td>75.0</td>\n",
+       "      <td>31.50</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -1107,7 +1107,7 @@
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>fall</td>\n",
-       "      <td>81.0</td>\n",
+       "      <td>32.58</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1120,7 +1120,7 @@
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>fall</td>\n",
-       "      <td>94.0</td>\n",
+       "      <td>34.92</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -1133,7 +1133,7 @@
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>fall</td>\n",
-       "      <td>81.0</td>\n",
+       "      <td>32.58</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -1146,7 +1146,7 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>fall</td>\n",
-       "      <td>64.0</td>\n",
+       "      <td>29.52</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1159,7 +1159,7 @@
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>fall</td>\n",
-       "      <td>69.0</td>\n",
+       "      <td>30.42</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1172,7 +1172,7 @@
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>fall</td>\n",
-       "      <td>75.0</td>\n",
+       "      <td>31.50</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -1185,7 +1185,7 @@
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>fall</td>\n",
-       "      <td>67.0</td>\n",
+       "      <td>30.06</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1201,26 +1201,26 @@
       ],
       "text/plain": [
        "    Season    Age  Childish  Accident  Surgical  High  Frequency  Smoking  \\\n",
-       "0   Spring   69.0         0         1         1     0        0.8        0   \n",
-       "1   Spring   94.0         1         0         1     0        0.8        1   \n",
-       "2   Spring   50.0         1         0         0     0        1.0       -1   \n",
-       "3   Spring   75.0         0         1         1     0        1.0       -1   \n",
-       "4   Spring   67.0         1         1         0     0        0.8       -1   \n",
-       "5   Spring   67.0         1         0         1     0        0.8        0   \n",
-       "6   Spring   67.0         0         0         0    -1        0.8       -1   \n",
-       "7   Spring  100.0         1         1         1     0        0.6       -1   \n",
-       "8     fall   64.0         0         0         1     0        0.8       -1   \n",
-       "9     fall   61.0         1         0         0     0        1.0       -1   \n",
-       "10    fall   67.0         1         1         0    -1        0.8        0   \n",
-       "11    fall   78.0         1         1         1     0        0.6        0   \n",
-       "12    fall   75.0         1         1         1     0        0.8        1   \n",
-       "13    fall   81.0         1         0         0     0        1.0       -1   \n",
-       "14    fall   94.0         1         1         1     0        0.2       -1   \n",
-       "15    fall   81.0         1         1         0     0        1.0        1   \n",
-       "16    fall   64.0         1         0         1     0        1.0       -1   \n",
-       "17    fall   69.0         1         0         1     0        0.8       -1   \n",
-       "18    fall   75.0         1         1         1     0        1.0        1   \n",
-       "19    fall   67.0         1         0         0     0        0.8        1   \n",
+       "0   Spring  30.42         0         1         1     0        0.8        0   \n",
+       "1   Spring  34.92         1         0         1     0        0.8        1   \n",
+       "2   Spring  27.00         1         0         0     0        1.0       -1   \n",
+       "3   Spring  31.50         0         1         1     0        1.0       -1   \n",
+       "4   Spring  30.06         1         1         0     0        0.8       -1   \n",
+       "5   Spring  30.06         1         0         1     0        0.8        0   \n",
+       "6   Spring  30.06         0         0         0    -1        0.8       -1   \n",
+       "7   Spring  36.00         1         1         1     0        0.6       -1   \n",
+       "8     fall  29.52         0         0         1     0        0.8       -1   \n",
+       "9     fall  28.98         1         0         0     0        1.0       -1   \n",
+       "10    fall  30.06         1         1         0    -1        0.8        0   \n",
+       "11    fall  32.04         1         1         1     0        0.6        0   \n",
+       "12    fall  31.50         1         1         1     0        0.8        1   \n",
+       "13    fall  32.58         1         0         0     0        1.0       -1   \n",
+       "14    fall  34.92         1         1         1     0        0.2       -1   \n",
+       "15    fall  32.58         1         1         0     0        1.0        1   \n",
+       "16    fall  29.52         1         0         1     0        1.0       -1   \n",
+       "17    fall  30.42         1         0         1     0        0.8       -1   \n",
+       "18    fall  31.50         1         1         1     0        1.0        1   \n",
+       "19    fall  30.06         1         0         0     0        0.8        1   \n",
        "\n",
        "    Number of hours Output  \n",
        "0              0.88      N  \n",
@@ -1258,7 +1258,7 @@
     "fertility.loc[fertility['Season'] == 1, 'Season'] = \"fall\"\n",
     "#display(fertility.head(20))\n",
     "\n",
-    "fertility['Age']=fertility['Age']*100\n",
+    "fertility['Age']=(fertility['Age']*18)+18\n",
     "display(fertility.head(20))"
    ]
   },
