--- a/module-1/lab-import-export/your-code/main.ipynb
+++ b/module-1/lab-import-export/your-code/main.ipynb
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -900,8 +900,161 @@
     "cols = ['Season', 'Age', 'Childish diseases', 'Accident', 'Surgical intervention', 'High fevers', 'Frequency of alcohol', 'Smoking', 'Hours spent sitting', 'Diagnosis']\n",
     "txt_url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/00244/fertility_Diagnosis.txt'\n",
     "fertility = pd.read_csv(txt_url, sep=',', names = cols)\n",
-    "display(fertility.head())"
+    "display(fertility.head())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Childish diseases</th>\n",
+       "      <th>Accident</th>\n",
+       "      <th>Surgical intervention</th>\n",
+       "      <th>High fevers</th>\n",
+       "      <th>Frequency of alcohol</th>\n",
+       "      <th>Smoking</th>\n",
+       "      <th>Hours spent sitting</th>\n",
+       "      <th>Diagnosis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Spring</td>\n",
+       "      <td>30.42</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Hardly ever</td>\n",
+       "      <td>Occasional</td>\n",
+       "      <td>21.12</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Spring</td>\n",
+       "      <td>34.92</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Hardly ever</td>\n",
+       "      <td>Daily</td>\n",
+       "      <td>7.44</td>\n",
+       "      <td>Altered</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Spring</td>\n",
+       "      <td>27.00</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>12.00</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Spring</td>\n",
+       "      <td>31.50</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>9.12</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Spring</td>\n",
+       "      <td>30.06</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Hardly ever</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>12.00</td>\n",
+       "      <td>Altered</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Season    Age Childish diseases Accident Surgical intervention High fevers  \\\n",
+       "0  Spring  30.42               Yes       No                    No         Yes   \n",
+       "1  Spring  34.92                No      Yes                    No         Yes   \n",
+       "2  Spring  27.00                No      Yes                   Yes         Yes   \n",
+       "3  Spring  31.50               Yes       No                    No         Yes   \n",
+       "4  Spring  30.06                No       No                   Yes         Yes   \n",
+       "\n",
+       "  Frequency of alcohol     Smoking  Hours spent sitting Diagnosis  \n",
+       "0          Hardly ever  Occasional                21.12    Normal  \n",
+       "1          Hardly ever       Daily                 7.44   Altered  \n",
+       "2                Never       Never                12.00    Normal  \n",
+       "3                Never       Never                 9.12    Normal  \n",
+       "4          Hardly ever       Never                12.00   Altered  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dict={ 0: 'Yes',\n",
+    "       1: 'No'\n",
+    "     }\n",
+    "\n",
+    "new_fert= fertility.replace({'Season': {-1: 'Winter', -0.33: 'Spring', 0.33: 'Summer', 1: 'Fall'}, \n",
+    "                             'Childish diseases': dict, 'Accident': dict, 'Surgical intervention': dict, 'High fevers': dict,\n",
+    "                            'Smoking': {-1: 'Never', 0: 'Occasional', 1: 'Daily'}, \n",
+    "                             'Diagnosis': {'N': 'Normal', 'O': 'Altered'}, \n",
+    "                            'Frequency of alcohol': {0: 'Several times a day', 0.2: 'Every day', 0.4: 'Several times a week',\n",
+    "                                                     0.6: 'Once a week', 0.8: 'Hardly ever', 1: 'Never'}})\n",
+    "\n",
+    "new_fert['Age']= (18*new_fert['Age']) + 18\n",
+    "new_fert['Hours spent sitting']= new_fert['Hours spent sitting']*24\n",
+    "\n",
+    "display(new_fert.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
