cambios en columna high fevers

--- a/module-1/lab-import-export/your-code/main.ipynb
+++ b/module-1/lab-import-export/your-code/main.ipynb
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -949,8 +949,8 @@
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Hardly ever</td>\n",
+       "      <td>&gt; 3 months ago</td>\n",
+       "      <td>Once a week</td>\n",
        "      <td>Occasional</td>\n",
        "      <td>21.12</td>\n",
        "      <td>Normal</td>\n",
@@ -962,8 +962,8 @@
        "      <td>No</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Hardly ever</td>\n",
+       "      <td>&gt; 3 months ago</td>\n",
+       "      <td>Once a week</td>\n",
        "      <td>Daily</td>\n",
        "      <td>7.44</td>\n",
        "      <td>Altered</td>\n",
@@ -975,8 +975,8 @@
        "      <td>No</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Never</td>\n",
+       "      <td>&gt; 3 months ago</td>\n",
+       "      <td>Hardly ever or never</td>\n",
        "      <td>Never</td>\n",
        "      <td>12.00</td>\n",
        "      <td>Normal</td>\n",
@@ -988,8 +988,8 @@
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Never</td>\n",
+       "      <td>&gt; 3 months ago</td>\n",
+       "      <td>Hardly ever or never</td>\n",
        "      <td>Never</td>\n",
        "      <td>9.12</td>\n",
        "      <td>Normal</td>\n",
@@ -1001,8 +1001,8 @@
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Hardly ever</td>\n",
+       "      <td>&gt; 3 months ago</td>\n",
+       "      <td>Once a week</td>\n",
        "      <td>Never</td>\n",
        "      <td>12.00</td>\n",
        "      <td>Altered</td>\n",
@@ -1012,19 +1012,26 @@
        "</div>"
       ],
       "text/plain": [
-       "   Season    Age Childish diseases Accident Surgical intervention High fevers  \\\n",
-       "0  Spring  30.42               Yes       No                    No         Yes   \n",
-       "1  Spring  34.92                No      Yes                    No         Yes   \n",
-       "2  Spring  27.00                No      Yes                   Yes         Yes   \n",
-       "3  Spring  31.50               Yes       No                    No         Yes   \n",
-       "4  Spring  30.06                No       No                   Yes         Yes   \n",
+       "   Season    Age Childish diseases Accident Surgical intervention  \\\n",
+       "0  Spring  30.42               Yes       No                    No   \n",
+       "1  Spring  34.92                No      Yes                    No   \n",
+       "2  Spring  27.00                No      Yes                   Yes   \n",
+       "3  Spring  31.50               Yes       No                    No   \n",
+       "4  Spring  30.06                No       No                   Yes   \n",
        "\n",
-       "  Frequency of alcohol     Smoking  Hours spent sitting Diagnosis  \n",
-       "0          Hardly ever  Occasional                21.12    Normal  \n",
-       "1          Hardly ever       Daily                 7.44   Altered  \n",
-       "2                Never       Never                12.00    Normal  \n",
-       "3                Never       Never                 9.12    Normal  \n",
-       "4          Hardly ever       Never                12.00   Altered  "
+       "      High fevers  Frequency of alcohol     Smoking  Hours spent sitting  \\\n",
+       "0  > 3 months ago           Once a week  Occasional                21.12   \n",
+       "1  > 3 months ago           Once a week       Daily                 7.44   \n",
+       "2  > 3 months ago  Hardly ever or never       Never                12.00   \n",
+       "3  > 3 months ago  Hardly ever or never       Never                 9.12   \n",
+       "4  > 3 months ago           Once a week       Never                12.00   \n",
+       "\n",
+       "  Diagnosis  \n",
+       "0    Normal  \n",
+       "1   Altered  \n",
+       "2    Normal  \n",
+       "3    Normal  \n",
+       "4   Altered  "
       ]
      },
      "metadata": {},
@@ -1035,16 +1042,22 @@
     "dict={ 0: 'Yes',\n",
     "       1: 'No'\n",
     "     }\n",
+    "dict2 = {\n",
+    "    -1 : '< 3 months ago',\n",
+    "    0: '> 3 months ago', \n",
+    "    1: 'No'\n",
+    "}\n",
     "\n",
     "new_fert= fertility.replace({'Season': {-1: 'Winter', -0.33: 'Spring', 0.33: 'Summer', 1: 'Fall'}, \n",
-    "                             'Childish diseases': dict, 'Accident': dict, 'Surgical intervention': dict, 'High fevers': dict,\n",
+    "                             'Childish diseases': dict, 'Accident': dict, 'Surgical intervention': dict, 'High fevers': dict2,\n",
     "                            'Smoking': {-1: 'Never', 0: 'Occasional', 1: 'Daily'}, \n",
     "                             'Diagnosis': {'N': 'Normal', 'O': 'Altered'}, \n",
-    "                            'Frequency of alcohol': {0: 'Several times a day', 0.2: 'Every day', 0.4: 'Several times a week',\n",
-    "                                                     0.6: 'Once a week', 0.8: 'Hardly ever', 1: 'Never'}})\n",
+    "                            'Frequency of alcohol': {0.2: 'Several times a day', 0.4: 'Every day', 0.6: 'Several times a week',\n",
+    "                                                     0.8: 'Once a week', 1: 'Hardly ever or never'}})\n",
     "\n",
     "new_fert['Age']= (18*new_fert['Age']) + 18\n",
     "new_fert['Hours spent sitting']= new_fert['Hours spent sitting']*24\n",
+    "\n",
     "\n",
     "display(new_fert.head())\n"
    ]
